# bnuGRMHD

./: .gitignore  CMakeLists.txt  GRMHD.sln  GRMHD.vcxproj  GRMHD.vcxproj.filters  Metric.cpp  Metric.h  eigen_test.cpp  init.h  main.cpp  metric_computation.nb  read_bin.py  utils.h
enc_temp_folder/a1925422dd34fc422f4bca17fe1ff537/: read_bin.py
enc_temp_folder/e31ef5443154fed1bcb54fdbf85b1875/: utils.h
metric/: mks.h
